examples/__outputs__/10_transport-http/transport-http_headers_raw__headers.output.txt
/some/path/to/transport-http_headers_raw__headers.ts:XX:XX
await graffle.gql`{ pokemons { name } }`.send()
              ^


TypeError: graffle.gql is not a function
    at <anonymous> (/some/path/to/transport-http_headers_raw__headers.ts:XX:XX:15)
    at ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX